[package]
name = "anti-debugger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "*"

[dependencies]
nix = {version = "0.24.1", features = ["ptrace", "signal"]}
bitflags = "*"
once_cell = "1.13.0"
libc = "0.2.126"
